# perivallon-thesis

./: .gitignore  CLAUDE.md  README.md  STATO.md  _pdf_ctx.txt  _tanager_pr.html  build.js  package-lock.json
waste/: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
waste/configs/: train.yaml
waste/configs/data/: aerialwaste.yaml  class_groups.yaml
waste/configs/model/: dofa.yaml  ssl4eo_s12.yaml  swin_imagenet.yaml  swin_rsp.yaml  swin_rsp_ms.yaml
waste/data/processed/: class_weights_22.json  dataset_stats.json  eurosat_ablation_results.PREV.json  eurosat_ablation_results.json  multiclass_results.json  smoke_test_results.json
waste/docs/: spectral_band_rationale.md
waste/notebooks/: 01_eda_aerialwaste.ipynb  02_eurosat_ablation.ipynb  04_backbone_multiclass_analysis.ipynb
waste/scripts/: compute_channel_stats.py  download_data.py  generate_synthetic_ms.py  run_backbone_comparison.py  run_eurosat_ablation.py  run_multiclass_experiment.py  run_smoke_tests.py  train.py
waste/src/waste_detection/: __init__.py
waste/src/waste_detection/data/: __init__.py  aerialwaste_dataset.py  aerialwaste_dm.py  aerialwaste_ms_dm.py  eurosat_ms_dm.py  synthetic_ms_dm.py
waste/src/waste_detection/evaluation/: metrics.py
waste/src/waste_detection/models/: __init__.py  dofa_classifier.py  multiclass_head.py  ssl4eo_classifier.py  swin_ms_adapter.py  swin_rsp_baseline.py
waste/src/waste_detection/training/: __init__.py  lightning_module.py  ms_module.py  multiclass_module.py
waste/tests/: conftest.py  test_dataset.py  test_model.py  test_ms_adapter.py
(+252 files in other folders)
