[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waste-detection"
version = "0.1.0"
description = "Multispectral deep learning for illegal waste detection — PERIVALLON Horizon Europe (Grant 101073952)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Alessandro Potenza" },
]
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchgeo>=0.6",
    "pytorch-lightning>=2.3",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "einops>=0.7",
    "timm>=1.0",
    "yacs>=0.1.8",  # required to deserialize the RSP Swin-T checkpoint (pickled CfgNode)
    "Pillow>=10.0",
    "wandb>=0.16",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "nbformat>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/waste_detection"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
